data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2259.wast
;; 10. **Test Description**: Program a scenario of nested blocks where an inner block contains a misnested `br` that attempts to prematurely exit to an outer non-existent label depth. Confirm proper error or resolution handling.    - **Constraint**: Ensure correct error handling and depth-checking for premature and incorrect branch exits.    - **Nesting Mismanagement Check**: Tests if misnested blocks are accurately detected and handled, providing proper error or safe resolution.

(assert_invalid
  (module (func $misnested-label-depth (result i32)
    (block $outer
      (block $inner
        (br 2 (i32.const 10))  ;; Trying to branch to a non-existent label depth
      )
      (i32.const 1)  ;; Remaining code to produce the final result
    )
  ))
  "unknown label"
)